P4/Lex_y_Yacc/y.output
Estado 147 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: Programa $end

    1 Programa: Cabecera_programa bloque

    2 $@1: %empty

    3 bloque: Inicio_de_bloque $@1 Declar_de_variables_locales Declar_subprogs Sentencias Fin_de_bloque

    4 Declar_subprogs: Declar_subprogs Declar_subprog
    5                | %empty

    6 $@2: %empty

    7 Declar_subprog: Cabecera_subprog $@2 bloque

    8 Declar_de_variables_locales: Marca_ini_declar_variables Variables_locales Marca_fin_declar_variables
    9                            | %empty

   10 Marca_ini_declar_variables: INIDEC

   11 Marca_fin_declar_variables: FINDEC

   12 Cabecera_programa: MAIN

   13 Inicio_de_bloque: LLAIZQ

   14 Fin_de_bloque: LLADER

   15 Variables_locales: Variables_locales Cuerpo_declar_variables
   16                  | Cuerpo_declar_variables

   17 $@3: %empty

   18 Cuerpo_declar_variables: tipo $@3 lista_declaracion_variables PYC
   19                        | error

   20 Cabecera_subprog: tipo variable PARIZQ argumentos PARDER
   21                 | tipo variable PARIZQ PARDER

   22 argumentos: tipo variable
   23           | argumentos COMA tipo variable
   24           | error

   25 variable: identificador
   26         | elemento_de_array

   27 elemento_de_array: identificador CORIZQ expresion CORDER
   28                  | identificador CORIZQ expresion COMA expresion CORDER

   29 Sentencias: Sentencias Sentencia
   30           | Sentencia

   31 Sentencia: bloque
   32          | sentencia_asignacion
   33          | sentencia_si
   34          | sentencia_mientras
   35          | sentencia_hacer_hasta
   36          | sentencia_entrada
   37          | sentencia_salida
   38          | sentencia_retornar

   39 sentencia_asignacion: variable ASIG expresion PYC
   40                     | error

   41 sentencia_si: SI PARIZQ expresion PARDER Sentencia
   42             | SI PARIZQ expresion PARDER Sentencia SINO Sentencia

   43 sentencia_mientras: MIENTRAS PARIZQ expresion PARDER Sentencia

   44 sentencia_hacer_hasta: HACER Sentencia HASTA PARIZQ expresion PARDER PYC

   45 sentencia_entrada: ENTRADA lista_variables PYC

   46 sentencia_salida: SALIDA lista_expresiones_cadena PYC

   47 sentencia_retornar: DEVOLVER expresion PYC

   48 lista_expresiones_cadena: lista_expresiones_cadena COMA expresion_cadena
   49                         | expresion_cadena

   50 expresion_cadena: expresion
   51                 | cadena

   52 lista_variables: variable
   53                | lista_variables COMA variable

   54 lista_declaracion_variables: variable
   55                            | lista_declaracion_variables COMA variable
   56                            | error

   57 lista_expresiones: expresion
   58                  | lista_expresiones COMA expresion

   59 expresion: PARIZQ expresion PARDER
   60          | OPNEG expresion
   61          | OPSUMA expresion
   62          | OPRESTA expresion
   63          | expresion OPMULT expresion
   64          | expresion OPDIV expresion
   65          | expresion OPMULTM expresion
   66          | expresion OPAND expresion
   67          | expresion OPOR expresion
   68          | expresion OPEQ expresion
   69          | expresion OPNEQ expresion
   70          | expresion OPLEQ expresion
   71          | expresion OPGEQ expresion
   72          | expresion OPLESS expresion
   73          | expresion OPGR expresion
   74          | expresion OPMOD expresion
   75          | expresion OPSUMA expresion
   76          | expresion OPRESTA expresion
   77          | variable
   78          | constante
   79          | funcion
   80          | error

   81 funcion: identificador PARIZQ PARDER
   82        | identificador PARIZQ lista_expresiones PARDER

   83 tipo: TIPOEL

   84 cadena: CADENA

   85 identificador: IDEN

   86 constante: CONST
   87          | CORIZQ ini_elementos_array CORDER

   88 ini_elementos_array: ini_elementos_array PYC lista_expresiones
   89                    | lista_expresiones


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256) 19 24 40 56 80
    OPOR (258) 67
    OPAND (259) 66
    OPEQ (260) 68
    OPNEQ (261) 69
    OPLEQ (262) 70
    OPGEQ (263) 71
    OPLESS (264) 72
    OPGR (265) 73
    OPSUMA (266) 61 75
    OPRESTA (267) 62 76
    OPMULT (268) 63
    OPMULTM (269) 65
    OPDIV (270) 64
    OPMOD (271) 74
    OPNEG (272) 60
    CONST (273) 86
    IDEN (274) 85
    CADENA (275) 84
    ASIG (276) 39
    CORIZQ (277) 27 28 87
    CORDER (278) 27 28 87
    PARIZQ (279) 20 21 41 42 43 44 59 81 82
    PARDER (280) 20 21 41 42 43 44 59 81 82
    LLAIZQ (281) 13
    LLADER (282) 14
    PYC (283) 18 39 44 45 46 47 88
    COMA (284) 23 28 48 53 55 58
    SI (285) 41 42
    SINO (286) 42
    MIENTRAS (287) 43
    HACER (288) 44
    HASTA (289) 44
    INIDEC (290) 10
    FINDEC (291) 11
    SALIDA (292) 46
    ENTRADA (293) 45
    DEVOLVER (294) 47
    MAIN (295) 12
    TIPOEL (296) 83


No terminales con las reglas donde aparecen

    $accept (42)
        on left: 0
    Programa (43)
        on left: 1
        on right: 0
    bloque (44)
        on left: 3
        on right: 1 7 31
    $@1 (45)
        on left: 2
        on right: 3
    Declar_subprogs (46)
        on left: 4 5
        on right: 3 4
    Declar_subprog (47)
        on left: 7
        on right: 4
    $@2 (48)
        on left: 6
        on right: 7
    Declar_de_variables_locales (49)
        on left: 8 9
        on right: 3
    Marca_ini_declar_variables (50)
        on left: 10
        on right: 8
    Marca_fin_declar_variables (51)
        on left: 11
        on right: 8
    Cabecera_programa (52)
        on left: 12
        on right: 1
    Inicio_de_bloque (53)
        on left: 13
        on right: 3
    Fin_de_bloque (54)
        on left: 14
        on right: 3
    Variables_locales (55)
        on left: 15 16
        on right: 8 15
    Cuerpo_declar_variables (56)
        on left: 18 19
        on right: 15 16
    $@3 (57)
        on left: 17
        on right: 18
    Cabecera_subprog (58)
        on left: 20 21
        on right: 7
    argumentos (59)
        on left: 22 23 24
        on right: 20 23
    variable (60)
        on left: 25 26
        on right: 20 21 22 23 39 52 53 54 55 77
    elemento_de_array (61)
        on left: 27 28
        on right: 26
    Sentencias (62)
        on left: 29 30
        on right: 3 29
    Sentencia (63)
        on left: 31 32 33 34 35 36 37 38
        on right: 29 30 41 42 43 44
    sentencia_asignacion (64)
        on left: 39 40
        on right: 32
    sentencia_si (65)
        on left: 41 42
        on right: 33
    sentencia_mientras (66)
        on left: 43
        on right: 34
    sentencia_hacer_hasta (67)
        on left: 44
        on right: 35
    sentencia_entrada (68)
        on left: 45
        on right: 36
    sentencia_salida (69)
        on left: 46
        on right: 37
    sentencia_retornar (70)
        on left: 47
        on right: 38
    lista_expresiones_cadena (71)
        on left: 48 49
        on right: 46 48
    expresion_cadena (72)
        on left: 50 51
        on right: 48 49
    lista_variables (73)
        on left: 52 53
        on right: 45 53
    lista_declaracion_variables (74)
        on left: 54 55 56
        on right: 18 55
    lista_expresiones (75)
        on left: 57 58
        on right: 58 82 88 89
    expresion (76)
        on left: 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80
        on right: 27 28 39 41 42 43 44 47 50 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76
    funcion (77)
        on left: 81 82
        on right: 79
    tipo (78)
        on left: 83
        on right: 18 20 21 22 23
    cadena (79)
        on left: 84
        on right: 51
    identificador (80)
        on left: 85
        on right: 25 27 28 81 82
    constante (81)
        on left: 86 87
        on right: 78
    ini_elementos_array (82)
        on left: 88 89
        on right: 87 88


Estado 0

    0 $accept: . Programa $end

    MAIN  desplazar e ir al estado 1

    Programa           ir al estado 2
    Cabecera_programa  ir al estado 3


Estado 1

   12 Cabecera_programa: MAIN .

    $default  reduce usando la regla 12 (Cabecera_programa)


Estado 2

    0 $accept: Programa . $end

    $end  desplazar e ir al estado 4


Estado 3

    1 Programa: Cabecera_programa . bloque

    LLAIZQ  desplazar e ir al estado 5

    bloque            ir al estado 6
    Inicio_de_bloque  ir al estado 7


Estado 4

    0 $accept: Programa $end .

    $default  aceptar


Estado 5

   13 Inicio_de_bloque: LLAIZQ .

    $default  reduce usando la regla 13 (Inicio_de_bloque)


Estado 6

    1 Programa: Cabecera_programa bloque .

    $default  reduce usando la regla 1 (Programa)


Estado 7

    3 bloque: Inicio_de_bloque . $@1 Declar_de_variables_locales Declar_subprogs Sentencias Fin_de_bloque

    $default  reduce usando la regla 2 ($@1)

    $@1  ir al estado 8


Estado 8

    3 bloque: Inicio_de_bloque $@1 . Declar_de_variables_locales Declar_subprogs Sentencias Fin_de_bloque

    INIDEC  desplazar e ir al estado 9

    $default  reduce usando la regla 9 (Declar_de_variables_locales)

    Declar_de_variables_locales  ir al estado 10
    Marca_ini_declar_variables   ir al estado 11


Estado 9

   10 Marca_ini_declar_variables: INIDEC .

    $default  reduce usando la regla 10 (Marca_ini_declar_variables)


Estado 10

    3 bloque: Inicio_de_bloque $@1 Declar_de_variables_locales . Declar_subprogs Sentencias Fin_de_bloque

    $default  reduce usando la regla 5 (Declar_subprogs)

    Declar_subprogs  ir al estado 12


Estado 11

    8 Declar_de_variables_locales: Marca_ini_declar_variables . Variables_locales Marca_fin_declar_variables

    error   desplazar e ir al estado 13
    TIPOEL  desplazar e ir al estado 14

    Variables_locales        ir al estado 15
    Cuerpo_declar_variables  ir al estado 16
    tipo                     ir al estado 17


Estado 12

    3 bloque: Inicio_de_bloque $@1 Declar_de_variables_locales Declar_subprogs . Sentencias Fin_de_bloque
    4 Declar_subprogs: Declar_subprogs . Declar_subprog

    error     desplazar e ir al estado 18
    IDEN      desplazar e ir al estado 19
    LLAIZQ    desplazar e ir al estado 5
    SI        desplazar e ir al estado 20
    MIENTRAS  desplazar e ir al estado 21
    HACER     desplazar e ir al estado 22
    SALIDA    desplazar e ir al estado 23
    ENTRADA   desplazar e ir al estado 24
    DEVOLVER  desplazar e ir al estado 25
    TIPOEL    desplazar e ir al estado 14

    bloque                 ir al estado 26
    Declar_subprog         ir al estado 27
    Inicio_de_bloque       ir al estado 7
    Cabecera_subprog       ir al estado 28
    variable               ir al estado 29
    elemento_de_array      ir al estado 30
    Sentencias             ir al estado 31
    Sentencia              ir al estado 32
    sentencia_asignacion   ir al estado 33
    sentencia_si           ir al estado 34
    sentencia_mientras     ir al estado 35
    sentencia_hacer_hasta  ir al estado 36
    sentencia_entrada      ir al estado 37
    sentencia_salida       ir al estado 38
    sentencia_retornar     ir al estado 39
    tipo                   ir al estado 40
    identificador          ir al estado 41


Estado 13

   19 Cuerpo_declar_variables: error .

    $default  reduce usando la regla 19 (Cuerpo_declar_variables)


Estado 14

   83 tipo: TIPOEL .

    $default  reduce usando la regla 83 (tipo)


Estado 15

    8 Declar_de_variables_locales: Marca_ini_declar_variables Variables_locales . Marca_fin_declar_variables
   15 Variables_locales: Variables_locales . Cuerpo_declar_variables

    error   desplazar e ir al estado 13
    FINDEC  desplazar e ir al estado 42
    TIPOEL  desplazar e ir al estado 14

    Marca_fin_declar_variables  ir al estado 43
    Cuerpo_declar_variables     ir al estado 44
    tipo                        ir al estado 17


Estado 16

   16 Variables_locales: Cuerpo_declar_variables .

    $default  reduce usando la regla 16 (Variables_locales)


Estado 17

   18 Cuerpo_declar_variables: tipo . $@3 lista_declaracion_variables PYC

    $default  reduce usando la regla 17 ($@3)

    $@3  ir al estado 45


Estado 18

   40 sentencia_asignacion: error .

    $default  reduce usando la regla 40 (sentencia_asignacion)


Estado 19

   85 identificador: IDEN .

    $default  reduce usando la regla 85 (identificador)


Estado 20

   41 sentencia_si: SI . PARIZQ expresion PARDER Sentencia
   42             | SI . PARIZQ expresion PARDER Sentencia SINO Sentencia

    PARIZQ  desplazar e ir al estado 46


Estado 21

   43 sentencia_mientras: MIENTRAS . PARIZQ expresion PARDER Sentencia

    PARIZQ  desplazar e ir al estado 47


Estado 22

   44 sentencia_hacer_hasta: HACER . Sentencia HASTA PARIZQ expresion PARDER PYC

    error     desplazar e ir al estado 18
    IDEN      desplazar e ir al estado 19
    LLAIZQ    desplazar e ir al estado 5
    SI        desplazar e ir al estado 20
    MIENTRAS  desplazar e ir al estado 21
    HACER     desplazar e ir al estado 22
    SALIDA    desplazar e ir al estado 23
    ENTRADA   desplazar e ir al estado 24
    DEVOLVER  desplazar e ir al estado 25

    bloque                 ir al estado 26
    Inicio_de_bloque       ir al estado 7
    variable               ir al estado 29
    elemento_de_array      ir al estado 30
    Sentencia              ir al estado 48
    sentencia_asignacion   ir al estado 33
    sentencia_si           ir al estado 34
    sentencia_mientras     ir al estado 35
    sentencia_hacer_hasta  ir al estado 36
    sentencia_entrada      ir al estado 37
    sentencia_salida       ir al estado 38
    sentencia_retornar     ir al estado 39
    identificador          ir al estado 41


Estado 23

   46 sentencia_salida: SALIDA . lista_expresiones_cadena PYC

    error    desplazar e ir al estado 49
    OPSUMA   desplazar e ir al estado 50
    OPRESTA  desplazar e ir al estado 51
    OPNEG    desplazar e ir al estado 52
    CONST    desplazar e ir al estado 53
    IDEN     desplazar e ir al estado 19
    CADENA   desplazar e ir al estado 54
    CORIZQ   desplazar e ir al estado 55
    PARIZQ   desplazar e ir al estado 56

    variable                  ir al estado 57
    elemento_de_array         ir al estado 30
    lista_expresiones_cadena  ir al estado 58
    expresion_cadena          ir al estado 59
    expresion                 ir al estado 60
    funcion                   ir al estado 61
    cadena                    ir al estado 62
    identificador             ir al estado 63
    constante                 ir al estado 64


Estado 24

   45 sentencia_entrada: ENTRADA . lista_variables PYC

    IDEN  desplazar e ir al estado 19

    variable           ir al estado 65
    elemento_de_array  ir al estado 30
    lista_variables    ir al estado 66
    identificador      ir al estado 41


Estado 25

   47 sentencia_retornar: DEVOLVER . expresion PYC

    error    desplazar e ir al estado 49
    OPSUMA   desplazar e ir al estado 50
    OPRESTA  desplazar e ir al estado 51
    OPNEG    desplazar e ir al estado 52
    CONST    desplazar e ir al estado 53
    IDEN     desplazar e ir al estado 19
    CORIZQ   desplazar e ir al estado 55
    PARIZQ   desplazar e ir al estado 56

    variable           ir al estado 57
    elemento_de_array  ir al estado 30
    expresion          ir al estado 67
    funcion            ir al estado 61
    identificador      ir al estado 63
    constante          ir al estado 64


Estado 26

   31 Sentencia: bloque .

    $default  reduce usando la regla 31 (Sentencia)


Estado 27

    4 Declar_subprogs: Declar_subprogs Declar_subprog .

    $default  reduce usando la regla 4 (Declar_subprogs)


Estado 28

    7 Declar_subprog: Cabecera_subprog . $@2 bloque

    $default  reduce usando la regla 6 ($@2)

    $@2  ir al estado 68


Estado 29

   39 sentencia_asignacion: variable . ASIG expresion PYC

    ASIG  desplazar e ir al estado 69


Estado 30

   26 variable: elemento_de_array .

    $default  reduce usando la regla 26 (variable)


Estado 31

    3 bloque: Inicio_de_bloque $@1 Declar_de_variables_locales Declar_subprogs Sentencias . Fin_de_bloque
   29 Sentencias: Sentencias . Sentencia

    error     desplazar e ir al estado 18
    IDEN      desplazar e ir al estado 19
    LLAIZQ    desplazar e ir al estado 5
    LLADER    desplazar e ir al estado 70
    SI        desplazar e ir al estado 20
    MIENTRAS  desplazar e ir al estado 21
    HACER     desplazar e ir al estado 22
    SALIDA    desplazar e ir al estado 23
    ENTRADA   desplazar e ir al estado 24
    DEVOLVER  desplazar e ir al estado 25

    bloque                 ir al estado 26
    Inicio_de_bloque       ir al estado 7
    Fin_de_bloque          ir al estado 71
    variable               ir al estado 29
    elemento_de_array      ir al estado 30
    Sentencia              ir al estado 72
    sentencia_asignacion   ir al estado 33
    sentencia_si           ir al estado 34
    sentencia_mientras     ir al estado 35
    sentencia_hacer_hasta  ir al estado 36
    sentencia_entrada      ir al estado 37
    sentencia_salida       ir al estado 38
    sentencia_retornar     ir al estado 39
    identificador          ir al estado 41


Estado 32

   30 Sentencias: Sentencia .

    $default  reduce usando la regla 30 (Sentencias)


Estado 33

   32 Sentencia: sentencia_asignacion .

    $default  reduce usando la regla 32 (Sentencia)


Estado 34

   33 Sentencia: sentencia_si .

    $default  reduce usando la regla 33 (Sentencia)


Estado 35

   34 Sentencia: sentencia_mientras .

    $default  reduce usando la regla 34 (Sentencia)


Estado 36

   35 Sentencia: sentencia_hacer_hasta .

    $default  reduce usando la regla 35 (Sentencia)


Estado 37

   36 Sentencia: sentencia_entrada .

    $default  reduce usando la regla 36 (Sentencia)


Estado 38

   37 Sentencia: sentencia_salida .

    $default  reduce usando la regla 37 (Sentencia)


Estado 39

   38 Sentencia: sentencia_retornar .

    $default  reduce usando la regla 38 (Sentencia)


Estado 40

   20 Cabecera_subprog: tipo . variable PARIZQ argumentos PARDER
   21                 | tipo . variable PARIZQ PARDER

    IDEN  desplazar e ir al estado 19

    variable           ir al estado 73
    elemento_de_array  ir al estado 30
    identificador      ir al estado 41


Estado 41

   25 variable: identificador .
   27 elemento_de_array: identificador . CORIZQ expresion CORDER
   28                  | identificador . CORIZQ expresion COMA expresion CORDER

    CORIZQ  desplazar e ir al estado 74

    $default  reduce usando la regla 25 (variable)


Estado 42

   11 Marca_fin_declar_variables: FINDEC .

    $default  reduce usando la regla 11 (Marca_fin_declar_variables)


Estado 43

    8 Declar_de_variables_locales: Marca_ini_declar_variables Variables_locales Marca_fin_declar_variables .

    $default  reduce usando la regla 8 (Declar_de_variables_locales)


Estado 44

   15 Variables_locales: Variables_locales Cuerpo_declar_variables .

    $default  reduce usando la regla 15 (Variables_locales)


Estado 45

   18 Cuerpo_declar_variables: tipo $@3 . lista_declaracion_variables PYC

    error  desplazar e ir al estado 75
    IDEN   desplazar e ir al estado 19

    variable                     ir al estado 76
    elemento_de_array            ir al estado 30
    lista_declaracion_variables  ir al estado 77
    identificador                ir al estado 41


Estado 46

   41 sentencia_si: SI PARIZQ . expresion PARDER Sentencia
   42             | SI PARIZQ . expresion PARDER Sentencia SINO Sentencia

    error    desplazar e ir al estado 49
    OPSUMA   desplazar e ir al estado 50
    OPRESTA  desplazar e ir al estado 51
    OPNEG    desplazar e ir al estado 52
    CONST    desplazar e ir al estado 53
    IDEN     desplazar e ir al estado 19
    CORIZQ   desplazar e ir al estado 55
    PARIZQ   desplazar e ir al estado 56

    variable           ir al estado 57
    elemento_de_array  ir al estado 30
    expresion          ir al estado 78
    funcion            ir al estado 61
    identificador      ir al estado 63
    constante          ir al estado 64


Estado 47

   43 sentencia_mientras: MIENTRAS PARIZQ . expresion PARDER Sentencia

    error    desplazar e ir al estado 49
    OPSUMA   desplazar e ir al estado 50
    OPRESTA  desplazar e ir al estado 51
    OPNEG    desplazar e ir al estado 52
    CONST    desplazar e ir al estado 53
    IDEN     desplazar e ir al estado 19
    CORIZQ   desplazar e ir al estado 55
    PARIZQ   desplazar e ir al estado 56

    variable           ir al estado 57
    elemento_de_array  ir al estado 30
    expresion          ir al estado 79
    funcion            ir al estado 61
    identificador      ir al estado 63
    constante          ir al estado 64


Estado 48

   44 sentencia_hacer_hasta: HACER Sentencia . HASTA PARIZQ expresion PARDER PYC

    HASTA  desplazar e ir al estado 80


Estado 49

   80 expresion: error .

    $default  reduce usando la regla 80 (expresion)


Estado 50

   61 expresion: OPSUMA . expresion

    error    desplazar e ir al estado 49
    OPSUMA   desplazar e ir al estado 50
    OPRESTA  desplazar e ir al estado 51
    OPNEG    desplazar e ir al estado 52
    CONST    desplazar e ir al estado 53
    IDEN     desplazar e ir al estado 19
    CORIZQ   desplazar e ir al estado 55
    PARIZQ   desplazar e ir al estado 56

    variable           ir al estado 57
    elemento_de_array  ir al estado 30
    expresion          ir al estado 81
    funcion            ir al estado 61
    identificador      ir al estado 63
    constante          ir al estado 64


Estado 51

   62 expresion: OPRESTA . expresion

    error    desplazar e ir al estado 49
    OPSUMA   desplazar e ir al estado 50
    OPRESTA  desplazar e ir al estado 51
    OPNEG    desplazar e ir al estado 52
    CONST    desplazar e ir al estado 53
    IDEN     desplazar e ir al estado 19
    CORIZQ   desplazar e ir al estado 55
    PARIZQ   desplazar e ir al estado 56

    variable           ir al estado 57
    elemento_de_array  ir al estado 30
    expresion          ir al estado 82
    funcion            ir al estado 61
    identificador      ir al estado 63
    constante          ir al estado 64


Estado 52

   60 expresion: OPNEG . expresion

    error    desplazar e ir al estado 49
    OPSUMA   desplazar e ir al estado 50
    OPRESTA  desplazar e ir al estado 51
    OPNEG    desplazar e ir al estado 52
    CONST    desplazar e ir al estado 53
    IDEN     desplazar e ir al estado 19
    CORIZQ   desplazar e ir al estado 55
    PARIZQ   desplazar e ir al estado 56

    variable           ir al estado 57
    elemento_de_array  ir al estado 30
    expresion          ir al estado 83
    funcion            ir al estado 61
    identificador      ir al estado 63
    constante          ir al estado 64


Estado 53

   86 constante: CONST .

    $default  reduce usando la regla 86 (constante)


Estado 54

   84 cadena: CADENA .

    $default  reduce usando la regla 84 (cadena)


Estado 55

   87 constante: CORIZQ . ini_elementos_array CORDER

    error    desplazar e ir al estado 49
    OPSUMA   desplazar e ir al estado 50
    OPRESTA  desplazar e ir al estado 51
    OPNEG    desplazar e ir al estado 52
    CONST    desplazar e ir al estado 53
    IDEN     desplazar e ir al estado 19
    CORIZQ   desplazar e ir al estado 55
    PARIZQ   desplazar e ir al estado 56

    variable             ir al estado 57
    elemento_de_array    ir al estado 30
    lista_expresiones    ir al estado 84
    expresion            ir al estado 85
    funcion              ir al estado 61
    identificador        ir al estado 63
    constante            ir al estado 64
    ini_elementos_array  ir al estado 86


Estado 56

   59 expresion: PARIZQ . expresion PARDER

    error    desplazar e ir al estado 49
    OPSUMA   desplazar e ir al estado 50
    OPRESTA  desplazar e ir al estado 51
    OPNEG    desplazar e ir al estado 52
    CONST    desplazar e ir al estado 53
    IDEN     desplazar e ir al estado 19
    CORIZQ   desplazar e ir al estado 55
    PARIZQ   desplazar e ir al estado 56

    variable           ir al estado 57
    elemento_de_array  ir al estado 30
    expresion          ir al estado 87
    funcion            ir al estado 61
    identificador      ir al estado 63
    constante          ir al estado 64


Estado 57

   77 expresion: variable .

    $default  reduce usando la regla 77 (expresion)


Estado 58

   46 sentencia_salida: SALIDA lista_expresiones_cadena . PYC
   48 lista_expresiones_cadena: lista_expresiones_cadena . COMA expresion_cadena

    PYC   desplazar e ir al estado 88
    COMA  desplazar e ir al estado 89


Estado 59

   49 lista_expresiones_cadena: expresion_cadena .

    $default  reduce usando la regla 49 (lista_expresiones_cadena)


Estado 60

   50 expresion_cadena: expresion .
   63 expresion: expresion . OPMULT expresion
   64          | expresion . OPDIV expresion
   65          | expresion . OPMULTM expresion
   66          | expresion . OPAND expresion
   67          | expresion . OPOR expresion
   68          | expresion . OPEQ expresion
   69          | expresion . OPNEQ expresion
   70          | expresion . OPLEQ expresion
   71          | expresion . OPGEQ expresion
   72          | expresion . OPLESS expresion
   73          | expresion . OPGR expresion
   74          | expresion . OPMOD expresion
   75          | expresion . OPSUMA expresion
   76          | expresion . OPRESTA expresion

    OPOR     desplazar e ir al estado 90
    OPAND    desplazar e ir al estado 91
    OPEQ     desplazar e ir al estado 92
    OPNEQ    desplazar e ir al estado 93
    OPLEQ    desplazar e ir al estado 94
    OPGEQ    desplazar e ir al estado 95
    OPLESS   desplazar e ir al estado 96
    OPGR     desplazar e ir al estado 97
    OPSUMA   desplazar e ir al estado 98
    OPRESTA  desplazar e ir al estado 99
    OPMULT   desplazar e ir al estado 100
    OPMULTM  desplazar e ir al estado 101
    OPDIV    desplazar e ir al estado 102
    OPMOD    desplazar e ir al estado 103

    $default  reduce usando la regla 50 (expresion_cadena)


Estado 61

   79 expresion: funcion .

    $default  reduce usando la regla 79 (expresion)


Estado 62

   51 expresion_cadena: cadena .

    $default  reduce usando la regla 51 (expresion_cadena)


Estado 63

   25 variable: identificador .
   27 elemento_de_array: identificador . CORIZQ expresion CORDER
   28                  | identificador . CORIZQ expresion COMA expresion CORDER
   81 funcion: identificador . PARIZQ PARDER
   82        | identificador . PARIZQ lista_expresiones PARDER

    CORIZQ  desplazar e ir al estado 74
    PARIZQ  desplazar e ir al estado 104

    $default  reduce usando la regla 25 (variable)


Estado 64

   78 expresion: constante .

    $default  reduce usando la regla 78 (expresion)


Estado 65

   52 lista_variables: variable .

    $default  reduce usando la regla 52 (lista_variables)


Estado 66

   45 sentencia_entrada: ENTRADA lista_variables . PYC
   53 lista_variables: lista_variables . COMA variable

    PYC   desplazar e ir al estado 105
    COMA  desplazar e ir al estado 106


Estado 67

   47 sentencia_retornar: DEVOLVER expresion . PYC
   63 expresion: expresion . OPMULT expresion
   64          | expresion . OPDIV expresion
   65          | expresion . OPMULTM expresion
   66          | expresion . OPAND expresion
   67          | expresion . OPOR expresion
   68          | expresion . OPEQ expresion
   69          | expresion . OPNEQ expresion
   70          | expresion . OPLEQ expresion
   71          | expresion . OPGEQ expresion
   72          | expresion . OPLESS expresion
   73          | expresion . OPGR expresion
   74          | expresion . OPMOD expresion
   75          | expresion . OPSUMA expresion
   76          | expresion . OPRESTA expresion

    OPOR     desplazar e ir al estado 90
    OPAND    desplazar e ir al estado 91
    OPEQ     desplazar e ir al estado 92
    OPNEQ    desplazar e ir al estado 93
    OPLEQ    desplazar e ir al estado 94
    OPGEQ    desplazar e ir al estado 95
    OPLESS   desplazar e ir al estado 96
    OPGR     desplazar e ir al estado 97
    OPSUMA   desplazar e ir al estado 98
    OPRESTA  desplazar e ir al estado 99
    OPMULT   desplazar e ir al estado 100
    OPMULTM  desplazar e ir al estado 101
    OPDIV    desplazar e ir al estado 102
    OPMOD    desplazar e ir al estado 103
    PYC      desplazar e ir al estado 107


Estado 68

    7 Declar_subprog: Cabecera_subprog $@2 . bloque

    LLAIZQ  desplazar e ir al estado 5

    bloque            ir al estado 108
    Inicio_de_bloque  ir al estado 7


Estado 69

   39 sentencia_asignacion: variable ASIG . expresion PYC

    error    desplazar e ir al estado 49
    OPSUMA   desplazar e ir al estado 50
    OPRESTA  desplazar e ir al estado 51
    OPNEG    desplazar e ir al estado 52
    CONST    desplazar e ir al estado 53
    IDEN     desplazar e ir al estado 19
    CORIZQ   desplazar e ir al estado 55
    PARIZQ   desplazar e ir al estado 56

    variable           ir al estado 57
    elemento_de_array  ir al estado 30
    expresion          ir al estado 109
    funcion            ir al estado 61
    identificador      ir al estado 63
    constante          ir al estado 64


Estado 70

   14 Fin_de_bloque: LLADER .

    $default  reduce usando la regla 14 (Fin_de_bloque)


Estado 71

    3 bloque: Inicio_de_bloque $@1 Declar_de_variables_locales Declar_subprogs Sentencias Fin_de_bloque .

    $default  reduce usando la regla 3 (bloque)


Estado 72

   29 Sentencias: Sentencias Sentencia .

    $default  reduce usando la regla 29 (Sentencias)


Estado 73

   20 Cabecera_subprog: tipo variable . PARIZQ argumentos PARDER
   21                 | tipo variable . PARIZQ PARDER

    PARIZQ  desplazar e ir al estado 110


Estado 74

   27 elemento_de_array: identificador CORIZQ . expresion CORDER
   28                  | identificador CORIZQ . expresion COMA expresion CORDER

    error    desplazar e ir al estado 49
    OPSUMA   desplazar e ir al estado 50
    OPRESTA  desplazar e ir al estado 51
    OPNEG    desplazar e ir al estado 52
    CONST    desplazar e ir al estado 53
    IDEN     desplazar e ir al estado 19
    CORIZQ   desplazar e ir al estado 55
    PARIZQ   desplazar e ir al estado 56

    variable           ir al estado 57
    elemento_de_array  ir al estado 30
    expresion          ir al estado 111
    funcion            ir al estado 61
    identificador      ir al estado 63
    constante          ir al estado 64


Estado 75

   56 lista_declaracion_variables: error .

    $default  reduce usando la regla 56 (lista_declaracion_variables)


Estado 76

   54 lista_declaracion_variables: variable .

    $default  reduce usando la regla 54 (lista_declaracion_variables)


Estado 77

   18 Cuerpo_declar_variables: tipo $@3 lista_declaracion_variables . PYC
   55 lista_declaracion_variables: lista_declaracion_variables . COMA variable

    PYC   desplazar e ir al estado 112
    COMA  desplazar e ir al estado 113


Estado 78

   41 sentencia_si: SI PARIZQ expresion . PARDER Sentencia
   42             | SI PARIZQ expresion . PARDER Sentencia SINO Sentencia
   63 expresion: expresion . OPMULT expresion
   64          | expresion . OPDIV expresion
   65          | expresion . OPMULTM expresion
   66          | expresion . OPAND expresion
   67          | expresion . OPOR expresion
   68          | expresion . OPEQ expresion
   69          | expresion . OPNEQ expresion
   70          | expresion . OPLEQ expresion
   71          | expresion . OPGEQ expresion
   72          | expresion . OPLESS expresion
   73          | expresion . OPGR expresion
   74          | expresion . OPMOD expresion
   75          | expresion . OPSUMA expresion
   76          | expresion . OPRESTA expresion

    OPOR     desplazar e ir al estado 90
    OPAND    desplazar e ir al estado 91
    OPEQ     desplazar e ir al estado 92
    OPNEQ    desplazar e ir al estado 93
    OPLEQ    desplazar e ir al estado 94
    OPGEQ    desplazar e ir al estado 95
    OPLESS   desplazar e ir al estado 96
    OPGR     desplazar e ir al estado 97
    OPSUMA   desplazar e ir al estado 98
    OPRESTA  desplazar e ir al estado 99
    OPMULT   desplazar e ir al estado 100
    OPMULTM  desplazar e ir al estado 101
    OPDIV    desplazar e ir al estado 102
    OPMOD    desplazar e ir al estado 103
    PARDER   desplazar e ir al estado 114


Estado 79

   43 sentencia_mientras: MIENTRAS PARIZQ expresion . PARDER Sentencia
   63 expresion: expresion . OPMULT expresion
   64          | expresion . OPDIV expresion
   65          | expresion . OPMULTM expresion
   66          | expresion . OPAND expresion
   67          | expresion . OPOR expresion
   68          | expresion . OPEQ expresion
   69          | expresion . OPNEQ expresion
   70          | expresion . OPLEQ expresion
   71          | expresion . OPGEQ expresion
   72          | expresion . OPLESS expresion
   73          | expresion . OPGR expresion
   74          | expresion . OPMOD expresion
   75          | expresion . OPSUMA expresion
   76          | expresion . OPRESTA expresion
